@@ -467,6 +467,7 @@ Browser window.</li>
 <li>Add new custom lexer class and refactor related lexer process</li>
 <li>Upgrade FlatNotebook.py to lastest version, thanks to swordsp</li>
 <li>Improve default identifiers process, add type judgement</li>
+<li>Add pylint plugin</li>
 </ol>
 <p>Bug fix:</p>
 <ol class="arabic simple">
